feat: support hmac signing and verification
